Change Log
==========

1.4.1

* Removed hard dependancy upon spidev, added message at runtime

1.4.0

* Moved to Stable status
* Added reset_pin support for Display-o-Tron HAT

1.3.1

* Fractional additional delay to prevent weirdness on Pi 2

1.3.0

* Python 3 fix

1.2.0

* Added "home" to reset cursor position
* Call "home" after "clear"

1.1.0

* Animation/custom char support

1.0.0

* Initial Release